@@ -1,6 +1,7 @@
 Change log for gfsm
 
 v0.0.10 Mon, Fri, 31 Oct 2008 14:29:52 +0100
+   + added configure flag --disable-programs for static builds
    + gfsmio_getdelim (local implementation): changed handling of GString data buffers
      - formerly, GString data was literally returned as (*lineptr)
      - old behavior breaks perl wrappers (e.g. _compile()) on OpenSuSE 11.0
